Small header spacing fix.

--- a/assets/scss/components/_site-header.scss
+++ b/assets/scss/components/_site-header.scss
@@ -35,6 +35,7 @@
 
     h1 {
       font-size: 1.5rem;
+      margin-bottom: 0;
     }
   }
 
