--- a/style.css
+++ b/style.css
@@ -183,7 +183,8 @@ h6 {
       color: inherit;
       border-bottom: none; }
     .site-header__logo h1 {
-      font-size: 1.5rem; }
+      font-size: 1.5rem;
+      margin-bottom: 0; }
   .site-header__buttons {
     display: flex;
     align-items: center;
